Logbook Changelog
=================

Here you can see the full list of changes between each Logboo release.

Version 0.2
-----------

Release date to be announced.

- Implemented default with statement for handlers.
- `applicationbound` and `threadbound` return the handler now.
- Implemented channel recording on the log records.
- the :class:`logbook.more.FingersCrossedHandler` now is set to
  `ERROR` by default and has the ability to create new loggers
  from a factory function.
- implemented maximum buffer size for the
  :class:`logbook.more.FingersCrossedHandler` as well as a lock
  for thread safety
- added ability to filter for context.