@@ -20,7 +20,7 @@ from itertools import izip
 
 from logbook.base import CRITICAL, ERROR, WARNING, NOTICE, INFO, DEBUG, \
      NOTSET, _level_name_property, _missing, lookup_level, \
-     ContextObject
+     _ContextObject
 from logbook.helpers import rename
 
 
@@ -69,7 +69,7 @@ def create_syshandler(application_name, level=NOTSET):
     return SyslogHandler(application_name, level=level)
 
 
-class Handler(ContextObject):
+class Handler(_ContextObject):
     """Handler instances dispatch logging events to specific destinations.
 
     The base handler class. Acts as a placeholder which defines the Handler
